--- a/Makefile.repo
+++ b/Makefile.repo
@@ -11,7 +11,7 @@ endif
 PREFIX = /usr
 
 configure: all
-	./configure --prefix=$(PREFIX) --libdir=$(PREFIX)/$(LIB)
+	./configure --prefix=$(PREFIX) --libdir=$(PREFIX)/$(LIB) --enable-selinux
 
 all:
 	aclocal
