--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -41,7 +41,7 @@ Summary:        Tool for filesystem snapshot management
 License:        GPL-2.0-only
 Group:          System/Packages
 URL:            http://snapper.io/
-Source:         snapper-%{version}.tar.bz2
+Source:         snapper-%{version}.tar.xz
 %if 0%{?suse_version}
 BuildRequires:  libboost_system-devel
 BuildRequires:  libboost_thread-devel
