- include libsnapper version in debug reply

--- a/snapper/Version.h.in
+++ b/snapper/Version.h.in
@@ -24,9 +24,9 @@
 #define SNAPPER_VERSION_H
 
 
-#define LIBSNAPPER_MAJOR="@LIBVERSION_MAJOR@"
-#define LIBSNAPPER_MINOR="@LIBVERSION_MINOR@"
-#define LIBSNAPPER_PATCHLEVEL="@LIBVERSION_PATCHLEVEL@"
+#define LIBSNAPPER_MAJOR "@LIBVERSION_MAJOR@"
+#define LIBSNAPPER_MINOR "@LIBVERSION_MINOR@"
+#define LIBSNAPPER_PATCHLEVEL "@LIBVERSION_PATCHLEVEL@"
 
 #define LIBSNAPPER_VERSION ( LIBSNAPPER_MAJOR * 10000 + \\
 			     LIBSNAPPER_MINOR * 100 + \\
