--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,8 @@ UBUNTU_FLAVOURS =	\
 	xUbuntu_21.10	\
 	xUbuntu_22.04	\
 	xUbuntu_22.10	\
-	xUbuntu_23.04
+	xUbuntu_23.04	\
+	xUbuntu_23.10
 
 RASPBIAN_FLAVOURS =	\
 	Raspbian_10	\
