--- a/doc/snapper-zypp-plugin.conf.xml.in
+++ b/doc/snapper-zypp-plugin.conf.xml.in
@@ -23,7 +23,7 @@
     <para>The file <filename>/etc/snapper/zypp-plugin.conf</filename>
     or as a fallback
     <filename>/usr/share/snapper/zypp-plugin.conf</filename> contains the
-    configuation for snapper-zypp-plugin.</para>
+    configuration for snapper-zypp-plugin.</para>
 
     <para>The file uses XML syntax. For the XML structure have a look at the
     provided default config.</para>
