--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,4 @@
+# Ref: https://github.com/codespell-project/codespell#using-a-config-file
 [codespell]
 skip = .git,*.pdf,*.svg,go.sum,.codespellrc,po
 check-hidden = true
