--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -268,6 +268,7 @@ This package contains libsnapper, a library for filesystem snapshot management.
 %else
 %config(noreplace) %{_sysconfdir}/sysconfig/snapper
 %endif
+%dir /usr/lib/snapper/plugins
 
 %pre -n libsnapper@LIBVERSION_MAJOR@
 # Migration from /etc/snapper to /usr/share/snapper
