- handle content-length of stomp in zypper plugin

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 
 SUBDIRS = snapper dbus server client scripts pam data doc po examples		\
-	testsuite testsuite-real testsuite-cmp zypp-plugin
+	testsuite testsuite-real testsuite-cmp stomp zypp-plugin
 
 AUTOMAKE_OPTIONS = foreign dist-xz no-dist-gzip
 
