--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper/dbus
 #
 
+SUBDIRS = . testsuite
+
 AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
 
 noinst_LTLIBRARIES = libdbus.la
