- make proxy class a convenience library

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -6,14 +6,21 @@ SUBDIRS = utils
 
 AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
 
-noinst_LTLIBRARIES = libclient.la
+noinst_LTLIBRARIES = libclient.la libproxy.la
 
 libclient_la_SOURCES =			\
 	types.cc	types.h		\
 	commands.cc	commands.h	\
 	errors.cc	errors.h
 
-libclient_la_LIBADD = utils/libutils.la ../dbus/libdbus.la
+libclient_la_LIBADD = 			\
+	utils/libutils.la		\
+	../dbus/libdbus.la
+
+libproxy_la_SOURCES =			\
+	proxy.cc	proxy.h		\
+	proxy-dbus.cc	proxy-dbus.h	\
+	proxy-lib.cc	proxy-lib.h
 
 bin_PROGRAMS = snapper
 
@@ -40,20 +47,18 @@ snapper_SOURCES =					\
 	cmd-cleanup.cc					\
 	cmd-debug.cc					\
 	cleanup.cc		cleanup.h		\
-	proxy.cc		proxy.h			\
-	proxy-dbus.cc		proxy-dbus.h		\
-	proxy-lib.cc		proxy-lib.h		\
 	locker.cc		locker.h		\
 	misc.cc			misc.h			\
 	MyFiles.cc		MyFiles.h		\
 	GlobalOptions.cc	GlobalOptions.h
 
 snapper_LDADD = 			\
+	libproxy.la			\
 	libclient.la			\
 	../snapper/libsnapper.la	\
 	utils/libutils.la		\
 	../dbus/libdbus.la		\
-	$(JSONC_LIBS)
+	$(JSON_C_LIBS)
 
 libexecdir = /usr/lib/snapper
 
@@ -62,13 +67,15 @@ libexec_PROGRAMS = systemd-helper
 systemd_helper_SOURCES =		\
 	systemd-helper.cc		\
 	cleanup.cc	cleanup.h	\
-	proxy.cc	proxy.h		\
-	proxy-dbus.cc	proxy-dbus.h	\
-	proxy-lib.cc	proxy-lib.h	\
 	locker.cc	locker.h	\
 	misc.cc		misc.h
 
-systemd_helper_LDADD = libclient.la ../snapper/libsnapper.la utils/libutils.la ../dbus/libdbus.la
+systemd_helper_LDADD = 			\
+	libproxy.la 			\
+	libclient.la 			\
+	../snapper/libsnapper.la	\
+	utils/libutils.la		\
+	../dbus/libdbus.la
 
 if ENABLE_BTRFS
 
