--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -39,7 +39,7 @@ table_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutil
 
 csv_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
-json_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la $(JSONC_LIBS)
+json_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la $(JSON_C_LIBS)
 
 getopts_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
