- moved proxy library to subdirectory

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -2,25 +2,9 @@
 # Makefile.am for snapper/client
 #
 
-SUBDIRS = utils
+SUBDIRS = utils proxy
 
 AM_CPPFLAGS = -I$(top_srcdir) $(DBUS_CFLAGS)
-
-noinst_LTLIBRARIES = libclient.la libproxy.la
-
-libclient_la_SOURCES =			\
-	types.cc	types.h		\
-	commands.cc	commands.h	\
-	errors.cc	errors.h
-
-libclient_la_LIBADD = 			\
-	utils/libutils.la		\
-	../dbus/libdbus.la
-
-libproxy_la_SOURCES =			\
-	proxy.cc	proxy.h		\
-	proxy-dbus.cc	proxy-dbus.h	\
-	proxy-lib.cc	proxy-lib.h
 
 bin_PROGRAMS = snapper
 
@@ -53,8 +37,8 @@ snapper_SOURCES =					\
 	GlobalOptions.cc	GlobalOptions.h
 
 snapper_LDADD = 			\
-	libproxy.la			\
-	libclient.la			\
+	proxy/libproxy.la		\
+	proxy/libclient.la		\
 	../snapper/libsnapper.la	\
 	utils/libutils.la		\
 	../dbus/libdbus.la		\
@@ -71,8 +55,8 @@ systemd_helper_SOURCES =		\
 	misc.cc		misc.h
 
 systemd_helper_LDADD = 			\
-	libproxy.la 			\
-	libclient.la 			\
+	proxy/libproxy.la 		\
+	proxy/libclient.la 		\
 	../snapper/libsnapper.la	\
 	utils/libutils.la		\
 	../dbus/libdbus.la
