--- a/configure.ac
+++ b/configure.ac
@@ -218,6 +218,7 @@ AC_CONFIG_FILES([
 	client/Makefile
 	client/utils/Makefile
 	client/proxy/Makefile
+	client/mksubvolume/Makefile
 	scripts/Makefile
 	pam/Makefile
 	data/Makefile
