--- a/doc/snapper.xml.in
+++ b/doc/snapper.xml.in
@@ -2,13 +2,13 @@
 <refentry id='snapper8' xmlns:xlink="http://www.w3.org/1999/xlink">
 
   <refentryinfo>
-    <date>2024-04-18</date>
+    <date>2024-10-24</date>
   </refentryinfo>
 
   <refmeta>
     <refentrytitle>snapper</refentrytitle>
     <manvolnum>8</manvolnum>
-    <refmiscinfo class='date'>2024-04-18</refmiscinfo>
+    <refmiscinfo class='date'>2024-10-24</refmiscinfo>
     <refmiscinfo class='version'>@VERSION@</refmiscinfo>
     <refmiscinfo class='manual'>Filesystem Snapshot Management</refmiscinfo>
   </refmeta>
@@ -548,6 +548,13 @@
 	      <listitem>
 		<para>Create a snapshot from the snapshot with the
 		provided number instead of snapshot 0.</para>
+	      </listitem>
+	    </varlistentry>
+	    <varlistentry>
+	      <term><option>--empty</option></term>
+	      <listitem>
+		<para>Create an empty snapshot. Only supported on
+		btrfs and with --no-dbus.</para>
 	      </listitem>
 	    </varlistentry>
 	  </variablelist>
